# ndk-FFMEPG

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/fast/flyer/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LOGUtils.h  amix_filter.cpp  amix_filter.h  ffmpeg_filter.cpp  ffmpeg_filter.h  hash_compare.cpp  native-lib.cpp  volume_filter.cpp  volume_filter.h
app/src/main/cpp/ffmpeg/libavutil/: common.h  ffversion.h
app/src/main/java/com/fast/flyer/ffmpeg/: MainActivity.java
app/src/main/java/com/fast/flyer/ffmpeg/utils/: VideoUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/fast/flyer/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
